# kino_review

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yaml  justfile  testing_report.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 93ada789499c_create_base_users_from_fastapi_users.py
backend/src/: config.py  db.py  loger.py  main.py
backend/src/apps/apigateway/: .env.example  Dockerfile  main.py  pyproject.toml
backend/src/apps/apigateway/app/: config.py  ioc.py  set_log.py  setup.py
backend/src/apps/apigateway/app/application/: errors.py
backend/src/apps/apigateway/app/infrastructure/security/: jwt_validator.py  token_claims.py
backend/src/apps/apigateway/app/presentation/: access.py
backend/src/apps/apigateway/app/presentation/middleware/: auth.py  user_headers.py
backend/src/apps/apigateway/docs/: ARCHITECTURE.md
backend/src/apps/apigateway/tests/: test_access_denied_handler.py  test_admin_user_routes.py  test_auth_headers.py  test_auth_openapi_patch.py  test_health.py  test_proxy_cookie_isolation.py  test_public_confirmation_path.py  test_reservation_email_e2e.py
backend/src/apps/apigetaway/: .env.example  AGENTS.md  main.py  pyproject.toml
backend/src/apps/apigetaway/app/: config.py  loc.py  setup.py
backend/src/apps/apigetaway/app/presentation/: handlers.py
backend/src/apps/apigetaway/app/presentation/middleware/: auth.py
backend/src/apps/apigetaway/docs/: ARCHITECTURE.md
backend/src/apps/apigetaway/tests/: test_auth_headers.py  test_reservation_email_e2e.py
backend/src/apps/auth/: .env.example  AGENTS.md  Dockerfile  config.py  main.py  pyproject.toml
backend/src/apps/auth/app/: config.py  dependens.py  ioc.py  set_log.py
backend/src/apps/auth/app/adapters/: orm.py  repository.py
backend/src/apps/auth/app/domain/: entities.py  use_case.py  values.py
backend/src/apps/auth/app/infrastructure/: constants.py  database.py  generation.py  jwt.py  transactions.py  transections.py
backend/src/apps/auth/app/presentations/: access.py  api.py  dependens.py  handlers.py  schemas.py
backend/src/apps/auth/app/services/: uow.py
backend/src/apps/auth/docs/: ARCHITECTURE.md
backend/src/apps/auth/migrations/: env.py
backend/src/apps/auth/migrations/versions/: 4ad702834146_add_username_and_time_create.py  7f5f43563341_delete_username.py  e6c9647ef3eb_create_tabels_users.py
backend/src/apps/auth/test/: test_values.py
backend/src/apps/auth/tests/: test_access_denied_handler.py  test_admin_access.py  test_admin_user_crud.py  test_refresh_tokens.py
backend/src/apps/notificate/: .env.example  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  worker.py
backend/src/apps/notificate/app/: bootstrap.py  config.py  ioc.py  set_log.py  taskiq_app.py
backend/src/apps/notificate/app/domain/: events.py
backend/src/apps/notificate/app/presentation/: api.py  broker.py  handlers.py  schemas.py  tasks.py
backend/src/apps/notificate/docs/: ARCHITECTURE.md
backend/src/apps/notificate/tests/: test_notification_flow.py
backend/src/apps/project/: .env.example  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  worker.py
backend/src/apps/project/app/: bootstrap.py  config.py  ioc.py  set_log.py
backend/src/apps/project/app/application/: reports_support.py  resource_access.py  support.py
backend/src/apps/project/app/domain/: __init__.py  entities.py  enums.py  events.py  value_objects.py
backend/src/apps/project/app/infrastructure/: database.py  generation.py  transactions.py
backend/src/apps/project/app/presentation/: api.py  broker.py  handlers.py  report_snapshot.py  schemas.py  tasks.py
backend/src/apps/project/migrations/: env.py
backend/src/apps/project/migrations/versions/: 2336d6388735_add_project_foreign_keys.py  6b1f3c7d9a20_add_reservation_outbox.py  9416ddde1a58_shift_reminder.py  9d1c3a6b4f2e_add_shift_reports.py  eb839239e502_start_shemas.py
backend/src/apps/project/tests/: test_api_crud_workflows.py  test_api_startup_runtime.py  test_domain_services.py  test_http_negative_scenarios.py  test_integration_api_http.py  test_policies_and_specs.py  test_project_management_service.py  test_report_snapshot_contract.py  test_reservation_event_flow.py  test_runtime_regressions.py  test_storage_startup.py  test_taskiq_broker_config.py  test_user_service_http_contract.py  test_xlsx_renderer.py
backend/src/apps/user/: .env.example  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
backend/src/apps/user/app/: config.py  ioc.py  set_log.py
backend/src/apps/user/app/application/: resource_ownership.py
backend/src/apps/user/app/domain/: constant.py
backend/src/apps/user/app/infrastructure/: constants.py  database.py  generation.py  transactions.py
backend/src/apps/user/app/presentation/: __init__.py  api.py  broker.py  handlers.py  schemas.py
backend/src/apps/user/docs/: ARCHITECTURE.md
backend/src/apps/user/migrations/: env.py
backend/src/apps/user/migrations/versions/: 59ddd0f24011_create_all_entity.py  672045836ce9_add_free_times.py  9d1e2b7a4c10_add_availability_reservations.py  b6a364d778fe_update_re_relationships.py
backend/src/apps/user/test/: helpers.py  test_add_image.py  test_add_spare_time.py  test_check_availability.py  test_confirmation_flow.py  test_create_description.py  test_create_equipment.py  test_create_microfon.py  test_delete_equipment.py  test_health.py  test_negative_scenarios.py  test_project_approval_state_broker.py  test_remove_image.py  test_report_snapshot.py  test_reserve_availability.py  test_storage_startup.py  test_update_description.py  test_update_equipment.py  test_user.py
backend/src/apps/user/tests/: test_free_times_api_smoke.py
backend/src/core/domain/: base.py
backend/src/core/infrastructure/repository/: base.py
backend/src/settings/: config.py  loger.py
backend/src/users/: dependensy.py  hash.py  manager.py  models.py  strategy.py  transport.py
backend/src/users/infrasructure/: repository.py
frontend/: .gitignore  (+10 more)
(+249 files in other folders)
