[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "vladislav1029",email = "vlad1090904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi-users (>=14.0.1,<15.0.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)",
    "httpx-oauth (>=0.16.1,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"

[tool.poetry]
package-mode = false

[tool.mypy]
# Включает строгую проверку типов (аналогично флагу --strict)
strict = true

# Указывает директории или модули для проверки
modules = ["src"]

# Исключает файлы/папки из проверки (например, тесты или виртуальное окружение)
exclude = [
  "tests.*",
  "__pycache__.*",
  ".venv.*",
  "src/settings/config.py",
]

# Дополнительные параметры (опционально)
show_error_codes = true
pretty = true