[project]
name = "apigateway"
version = "0.1.0"
description = ""
authors = [
    {name = "vladislav1029",email = "vlad1090904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dishka[fastapi] (>=1.6.0,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "PyJWT (>=2.9.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
ruff = "^0.15.12"

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort/imports
    "B",    # bugbear
    "UP",   # pyupgrade
    "C4",   # comprehensions
    "SIM",  # simplify
    "T20",  # print
    "ARG",  # unused arguments
    "ANN",  # annotations
    "ASYNC", # async checks
]

ignore = [
    "ANN101", # self annotation, если встретится на старых версиях
    "ANN102", # cls annotation, если встретится на старых версиях
    "ANN401", # Any разрешаем, иногда нужен для payload/dict
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "ANN",
    "ARG",
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e: live cross-service end-to-end tests",
]

