[project]
name = "apigateway"
version = "0.1.0"
description = ""
authors = [
    { name = "vladislav1029", email = "vlad1090904@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dishka[fastapi] (>=1.6.0,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "PyJWT[crypto] (>=2.9.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0,<10.0.0",
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.15.12,<0.16.0",
    "mypy>=1.19.1,<2.0.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["app", "main.py"]
exclude = "^(\\.venv|migrations|tests|test)/"
explicit_package_bases = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
no_implicit_optional = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "func-returns-value",
    "misc",
    "no-redef",
    "override",
    "return-value",
    "type-arg",
    "union-attr",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e: live cross-service end-to-end tests",
]
