[project]
name = "notificate"
version = "0.1.0"
description = ""
authors = [
    {name = "vladislav1029", email = "vlad1090904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dishka[fastapi] (>=1.6.0,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "faststream[rabbit] (>=0.5, <=0.6); python_version >= '3.10' and python_version <= '3.12'",
    "taskiq (>=0.11.18,<0.12.0)",
    "taskiq-aio-pika (>=0.4.2,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.pytest.ini_options]
pythonpath = ["."]
