[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "vladislav1029",email = "vlad1090904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dishka[fastapi] (>=1.6.0,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "faststream[rabbit] (>=0.5, <=0.6); python_version >= '3.10' and python_version <= '3.12'",
    "httpx (>=0.28.1,<0.29.0)",
    "aioboto3 (>=13.1.1,<14.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.16.4,<2.0.0)",
    "taskiq (>=0.11.18,<0.12.0)",
    "taskiq-aio-pika (>=0.4.2,<0.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.15.4"
mypy = "^1.19.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]
exclude = "^(\\.venv|migrations)/"
explicit_package_bases = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["app.config"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["app.set_log"]
disable_error_code = ["arg-type"]
