[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "vladislav1029",email = "vlad1090904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dishka[fastapi] (>=1.6.0,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "faststream[rabbit] (>=0.5, <=0.6); python_version >= '3.10' and python_version <= '3.12'",
    "httpx (>=0.28.1,<0.29.0)",
    "aioboto3 (>=13.1.1,<14.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.16.4,<2.0.0)",
    "taskiq (>=0.11.18,<0.12.0)",
    "taskiq-aio-pika (>=0.4.2,<0.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.15.4,<0.16.0",
    "mypy>=1.19.1,<2.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["app", "main.py", "worker.py"]
exclude = "^(\\.venv|migrations|tests|test)/"
explicit_package_bases = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
no_implicit_optional = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "call-overload",
    "func-returns-value",
    "misc",
    "no-redef",
    "override",
    "return-value",
    "type-arg",
    "union-attr",
]

[[tool.mypy.overrides]]
module = ["app.config"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["app.set_log"]
disable_error_code = ["arg-type"]
